--- a/frontend/AngularApp/src/app/chat/contact/contact.component.scss
+++ b/frontend/AngularApp/src/app/chat/contact/contact.component.scss
@@ -15,6 +15,12 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
+
+    .info {
+      margin: 0 0.5rem;
+      text-align: center;
+      color: $pink;
+    }
   }
 
   img {
